corrected header alignment issues with reference code

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,7 +65,7 @@ header nav ul li a {
   border-width: 3px;
   border-color: #024e76;
   position: absolute;
-  bottom: 320px;
+  bottom: 120px;
   right: 140px;
 }
 
